use UTF8, fix javadoc plugin configuration such that it allows preview features